--- a/front/package.json
+++ b/front/package.json
@@ -13,10 +13,12 @@
   "private": true,
   "packageManager": "npm@11.6.2",
   "dependencies": {
+    "@angular/cdk": "~21.1.3",
     "@angular/common": "^21.1.0",
     "@angular/compiler": "^21.1.0",
     "@angular/core": "^21.1.0",
     "@angular/forms": "^21.1.0",
+    "@angular/material": "~21.1.3",
     "@angular/platform-browser": "^21.1.0",
     "@angular/router": "^21.1.0",
     "@ngrx/effects": "^21.0.1",
@@ -30,6 +32,7 @@
     "@angular/build": "^21.1.3",
     "@angular/cli": "^21.1.3",
     "@angular/compiler-cli": "^21.1.0",
+    "@angular/material": "^21.1.3",
     "jsdom": "^27.1.0",
     "prettier": "^3.8.1",
     "typescript": "~5.9.2",
